# ML-Ops

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirementsCUDA.txt
.dvc/: config
.github/: dvc_pull.yaml
.github/workflows/: checks.yml  dvc_pull.yaml  python_checks.yml  tests.yaml
ML-Art/: __init__.py
ML-Art/data/: make_dataset.py
data/raw/: .gitignore  WikiArt_Subset.zip.dvc
dockerfiles/: gcloud-train.dockerfile  predict_model.dockerfile  run.sh  train_model.dockerfile  train_model_cuda.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
ml_art/: .flake8  __init__.py  predict_model.py  train_model.py  train_test_viz.py
ml_art/config/: config.yaml
ml_art/data/: data.py  make_dataset.py
ml_art/data/config/: data_config.yaml
ml_art/models/: model.py
ml_art/tests/: test_make_dataset.py  test_predict_model.py  test_train_model.py
ml_art/visualizations/: visualize.py
reports/: README.md  report.html  report.py
tests/: test_make_dataset.py  test_predict_model.py  test_train_model.py
