[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_art"
version = "0.0.1"
description = "Welcome !"
authors = [
  { name = "Hassan Hotait ", email = "h.hotait420@gmail.com" },
  { name = "Phillip Ravn Boe Jensen", email = "your@email.com" },
  { name = "Xueying Chen", email = "at1047s@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.black]
line-length = 79

[tool.setuptools]
packages = ["ml_art"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
