[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-art"
version = "0.0.1"
description = "Welcome !"
authors = [
  { name = "Hassan Hotait ", email = "h.hotait420@gmail.com" },
  { name = "Phillip Ravn Boe Jensen", email = "your@email.com" },
  { name = "Xueying Chen", email = "at1047s@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
# Changed to greater than 3.8 to use nvidia/cuda base image
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.black]
line-length = 79

[tool.setuptools]
packages = ["ml_art"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:wandb.sdk.launch.builder.build.*",
]
